# package_statistics

./: .pre-commit-config.yaml  package_statistics.py  pyproject.toml  readme.md
.github/workflows/: test.yaml
tests/: test_package_statistics.py
tests/data/: sample
