[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "package-statistics"
version = "0.1.0"
description = "10 most verbose packages"
authors = ["Dima Tisnek <dimaqq@gmail.com>"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mypy = "^1.7.0"
ruff = "^0.1.5"
ruff-lsp = "^0.0.45"

[tool.pytest.ini_options]
markers = ["network: slow and require egress (deselect with '-m \"not network\"')"]

[tool.ruff]
extend-select = ["I"]
